# flowsentry

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  flowsentry.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: benchmark.json  calibration.json  calibration_experiment.json  gbdt_comparison.json  hierarchy_benchmark.json  metrics.json  per_family.json  shap_top_features.json  split_comparison.json
dashboard/: app.py
docs/: ARCHITECTURE.md  MODEL_CARD.md  THREAT_MODEL.md
docs/adr/: 001-two-stage-hierarchy.md  002-connection-grouped-split.md  003-pr-auc-over-accuracy.md  004-reject-knob-at-request-time.md  005-artifact-and-data-shipping.md  006-config-vs-schema.md  007-sequential-scoring-path.md  008-single-process-serving.md
scripts/: build_sample.py  calibration_experiment.py  calibration_report.py  gbdt_comparison.py  get_data.py  hierarchy_benchmark.py  per_family_report.py  reproduce.py  shap_attribution.py  split_comparison.py
src/flowsentry/: __init__.py  attack_map.py  bench.py  calibration.py  config.py  data.py  drift.py  evaluation.py  gbdt.py  model.py  registry.py  scoring.py  service.py  sinks.py  stream.py  train.py
tests/: test_calibration.py  test_config.py  test_drift.py  test_evaluation.py  test_gbdt.py  test_model.py  test_registry.py  test_scoring.py  test_service.py  test_sinks.py
