[project]
name = "flowsentry"
version = "0.1.0"
description = "Real-time hierarchical intrusion detection with a tunable reject option."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
