[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowsentry"
version = "0.2.0"
description = "Per-flow hierarchical UDP/QUIC intrusion classifier with a tunable reject option."
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "numpy>=1.26",
    "joblib>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings[yaml]>=2.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.27", "mypy>=1.10"]
dashboard = ["streamlit>=1.30"]
# the boosted-tree comparison arms + SHAP attribution; optional because the
# shipped serving path does not depend on them
gbdt = ["lightgbm>=4.6", "xgboost>=3.0", "shap>=0.48", "matplotlib>=3.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
files = ["src/flowsentry"]
plugins = ["pydantic.mypy"]
# numpy >= 2.5 stubs use `type` statements, which mypy only parses at 3.12+;
# runtime 3.11 compatibility is covered by the CI test matrix
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

# strict where the types carry the contract: config, seams, and the fast paths
[[tool.mypy.overrides]]
module = [
    "flowsentry.config",
    "flowsentry.registry",
    "flowsentry.sinks",
    "flowsentry.drift",
    "flowsentry.scoring",
]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "joblib.*", "pandas.*", "lightgbm.*", "xgboost.*", "shap.*"]
ignore_missing_imports = true
